# awesome-ax

./: .gitmodules  build.sh  build_jsoncpp.sh  build_mosquitto.sh  build_rtsp.sh  build_rtspserver.sh  get_bsp.sh  get_opencv.sh
inc/: ax_pipeline.hpp  node.hpp
inc/inference/: detection.hpp  engine_env.hpp  engine_wrapper.cpp  engine_wrapper.hpp  recognition.hpp
inc/inference/detector/: BodyDetector.hpp  HVCPDetector.hpp  pico.hpp  yolox.hpp
inc/inference/recognizer/: PoseEstimator.hpp
inc/nodes/: RTSPPullNode.hpp  RTSPPushNode.hpp
inc/utils/: ax_algo_def.h  ax_algo_log.h  frame_utils.hpp  io.hpp
tests/: CMakeLists.txt  test_rtsp.cpp  test_rtsp.json
